--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,6 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Tahooma";
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url("../fonts/Tahoma/Tahoma Regular font.ttf") format("ttf");
-}
-
-@font-face {
   font-family: "Satoshi-Variable";
   src: url("../fonts/satoshi/Satoshi-Variable.woff2") format("woff2"),
     url("../fonts/satoshi/Satoshi-Variable.woff") format("woff"),
@@ -112,19 +104,26 @@
 
 @keyframes slideIn {
   from {
-    transform: translateY(-100%); /* Start from the left side */
-    opacity: 0; /* Start with opacity 0 */
+    transform: translateY(-100%);
+    /* Start from the left side */
+    opacity: 0;
+    /* Start with opacity 0 */
   }
+
   to {
-    transform: translateY(0); /* End at original position */
-    opacity: 1; /* End with full opacity */
+    transform: translateY(0);
+    /* End at original position */
+    opacity: 1;
+    /* End with full opacity */
   }
 }
 
 /* Apply slide-in animation to the text */
 .text-slide-in {
-  animation: slideIn 0.5s ease-out; /* Use slideIn animation with 0.5s duration */
+  animation: slideIn 0.5s ease-out;
+  /* Use slideIn animation with 0.5s duration */
 }
+
 .float {
   animation: float 3s ease-in-out infinite;
 }
@@ -147,9 +146,138 @@
   0% {
     transform: scale(1.5);
   }
+
   100% {
     transform: scale(0);
   }
+}
+
+@font-face {
+  font-family: "Clash Display";
+  src: url("/fonts/ClashDisplay_Complete/ClashDisplay-Regular.woff2") format("woff2"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Medium.woff") format("woff"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Clash-Display-Medium";
+  src: url("/fonts/ClashDisplay_Complete/ClashDisplay-Medium.woff2") format("woff2"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Medium.woff") format("woff"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Clash-Display-Semibold";
+  src: url("/fonts/ClashDisplay_Complete/ClashDisplay-Semibold.woff2") format("woff2"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Semibold.woff") format("woff"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Semibold.ttf") format("truetype");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Clash-Display-Bold";
+  src: url("/fonts/ClashDisplay_Complete/ClashDisplay-Bold.woff2") format("woff2"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Bold.woff") format("woff"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Clash-Display-Black";
+  src: url("/fonts/ClashDisplay_Complete/ClashDisplay-") format("woff2"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Bold.woff") format("woff"),
+    url("/fonts/ClashDisplay_Complete/ClashDisplay-Bold.ttf") format("truetype");
+  font-weight: 800;
+  font-display: swap;
+  font-style: normal;
+}
+
+.clash-display {
+  font-family: "Clash Display" !important;
+}
+
+.clash-display-medium {
+  font-family: "Clash-Display-Medium" !important;
+}
+
+.clash-display-semibold {
+  font-family: "Clash-Display-Semibold" !important;
+}
+
+.clash-display-bold {
+  font-family: "Clash-Display-Bold" !important;
+}
+
+/* app/globals.css */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader {
+  border: 8px solid #f3f3f3;
+  /* Light grey */
+  border-top: 8px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+
+.sidebar-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+.sidebar-scroll::-webkit-scrollbar-thumb {
+  background: transparent;
+  width: 6px;
+}
+
+/* Handle on hover */
+.sidebar-scroll::-webkit-scrollbar-thumb:hover {
+  background: transparent;
+}
+
+.sidebar-scroll::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.sidebar-scroll::-webkit-scrollbar-thumb {
+  background: #55A132;
+}
+
+.sidebar-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Animation */
+.animate-in {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.animate-out {
+  transform: translateY(-20px);
+  opacity: 0;
 }
 
 .pattern-1 {
