--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,8 +105,8 @@
 @font-face {
   font-family: "gilroy";
   src:
-    url("../fonts/gilroy/Gilroy-Medium.ttf") format("woff"),
     url("../fonts/gilroy/Gilroy-Medium.ttf") format("truetype");
+  /* url("../fonts/gilroy/Gilroy-?") format("truetype"); */
   font-weight: 500;
   font-display: swap;
   font-style: normal;
@@ -334,4 +334,16 @@
 
 .animate-wide {
   animation: wide 15s ease infinite alternate;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
