--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -347,3 +347,111 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input {
+  font-family: "sohne" !important;
+}
+
+.react-datepicker__header {
+  background-color: white !important;
+  border: none !important;
+}
+
+.react-datepicker {
+  /* border: none !important; */
+  font-family: "gilroy", sans-serif !important;
+}
+
+.react-datepicker__day-names {
+  padding-top: 1em !important;
+  padding-bottom: 0.4em !important;
+  color: #0009 !important;
+}
+
+.react-datepicker__day-name,
+.react-datepicker__day,
+.react-datepicker__time-name {
+  color: #0009 !important;
+
+}
+
+.react-datepicker__day-name,
+.react-datepicker__day,
+.react-datepicker__time-name {
+  color: #000000de !important;
+  border-radius: 100% !important;
+  font-size: 15px;
+  font-weight: normal !important;
+}
+
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected,
+.react-datepicker__quarter-text--keyboard-selected,
+.react-datepicker__year-text--keyboard-selected {
+  background-color: transparent !important;
+  border: 1px solid rgb(186.25, 217.0833333333, 241.25) !important;
+  font-weight: normal !important;
+}
+
+h2.react-datepicker__current-month {
+  color: #000000de !important;
+  font-weight: normal !important;
+}
+
+.react-datepicker__day--selected,
+.react-datepicker__day--in-selecting-range,
+.react-datepicker__day--in-range,
+.react-datepicker__month-text--selected,
+.react-datepicker__month-text--in-selecting-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--selected,
+.react-datepicker__quarter-text--in-selecting-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--selected,
+.react-datepicker__year-text--in-selecting-range,
+.react-datepicker__year-text--in-range {
+  color: white !important;
+}
+
+.react-datepicker__day--disabled,
+.react-datepicker__month-text--disabled,
+.react-datepicker__quarter-text--disabled,
+.react-datepicker__year-text--disabled {
+  opacity: 0.5 !important;
+}
+
+.status-Submitted {
+  color: #ae9a05;
+  background-color: #f7f5e8;
+  border-color: #ae9a05;
+}
+
+.status-Assigned {
+  color: #c2410c;
+  background-color: #FAF8E0;
+  border-color: #c2410c;
+}
+
+.status-Confirmed {
+  color: rgb(9, 156, 9);
+  background-color: rgb(165, 239, 165);
+  border-color: rgb(9, 156, 9);
+}
+
+.status-Completed {
+  color: green;
+  background-color: rgb(165, 239, 165);
+  border-color: green;
+}
+
+.status-Accept {
+  color: blue;
+  background-color: rgb(221, 221, 252);
+  border-color: blue;
+}
+
+.status-Accepted {
+  color: blue;
+  background-color: rgb(221, 221, 252);
+  border-color: blue;
+}
